[package]
name = "omni-transaction"
version = "0.2.1"
authors = ["Proximity Labs Limited"]
license = "Apache-2.0"
edition = "2021"
repository = "https://github.com/near/omni-transaction-rs"
description = "Transaction builder for all chains in Rust"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true

[features]
default = ["all"]
all = ["near", "bitcoin", "evm"]
bitcoin = ["sha2"]
evm = []
near = []

[dependencies]
rlp = "0.6.1"
hex = "0.4.3"
borsh = { version = "1.0.0", features = ["derive"] }
serde-big-array = "0.5.1"
bs58 = "0.5.1"
serde = "1.0.219"
serde_json = "1.0.140"
schemars = { version = "0.9.0" }
sha2 = { version = "0.10.8", optional = true }
# near-sdk = { version = "5.14.0", features = ["schemars"] }
# near-account-id = { version = "1.1.1", features = ["schemars"] }

[dev-dependencies]
# ethereum
alloy = { version = "1.0.9", features = ["full", "node-bindings", "rlp"] }
alloy-rlp = { version = "0.3.12", features = ["derive"] }
alloy-primitives = { version = "1.2.0" }

# near
near-primitives = { version = "0.25.0" }
near-crypto = { version = "0.25.0" }
near-jsonrpc-client = { git = "https://github.com/omni-rs/near-jsonrpc-client-rs", tag = "v0.12.1" }
near-workspaces = { version = "0.13.0", features = [
    "experimental",
    "unstable",
] }


# bitcoin
bitcoin = { version = "0.32.6", default-features = false, features = [
    "std",
    "serde",
    "rand-std",
    "rand",
    "secp-lowmemory",
    "secp-recovery",
] }
k256 = { version = "0.13.1", features = [
    "sha256",
    "ecdsa",
    "serde",
    "arithmetic",
    "expose-field",
] }

# async
tokio = { version = "1.38", features = ["full"] }

# misc
eyre = "0.6"

# testing
omni-testing-utilities = { git = "https://github.com/Omni-rs/omni-testing-utilities", branch = "main" }
